# mupen64plus-oldsvn

./: CMakeLists.txt  CreateTestBed.sh  DebugCreateTestBed.sh  LICENSES  Makefile  Makefile.mingw  README  RELEASE  TODO  cmake_uninstall.cmake.in  configure  install.sh  make.bat  mupen64plus.desktop.in  mupen64plus.ini  mupennet.conf  pre.mk  pre.mk.win32  release.mk  uninstall.sh  update_qt4_translations.sh  version.h.in
TestBed/: Debug.sh
blight_input/: CMakeLists.txt  Controller_1.1.h  Makefile  SDL_ttf.c  SDL_ttf.h  arial.ttf.c  arial.ttf.h  configdialog_sdl.c  gui.h  pad.c  pad.h  plugin.c  plugin.h  ttftoh.c
blight_input/gui_gtk/: configdialog.c  configdialog.h  gui.c
blight_input/gui_sdl/: configdialog.c  configdialog_sdl.c  configdialog_sdl.h  gui.c  pad.c  pad.h
config/: RiceVideoLinux.ini  blight_input.conf  jttl_audio.conf  mupen64plus.conf  mupen64plus.ini  z64gl.conf
debugger/: breakpoints.c  breakpoints.h  debugger.c  debugger.h  decoder.c  decoder.h  desasm.c  desasm.h  memory.c  memory.h  opprintf.c  opprintf.h  regAI.c  regAI.h  regCop0.c  regCop0.h  regCop1.c  regCop1.h  regGPR.c  regGPR.h  regPI.h  regRI.c  regRI.h  regSI.c  regSI.h  regSpecial.c  regSpecial.h  regTLB.c  regTLB.h  regVI.c  regVI.h  registers.h  types.h  ui_clist_edit.c  ui_clist_edit.h
doc/: Audio_#1.1.h  Controller_#1.1.h  Gfx_#1.3.h  Graphics_1.3.h  Input_1.1.h  Rsp_#1.1.h  Rsp_1.1.h
dummy_audio/: Audio_1.1.h  CMakeLists.txt  Makefile  audio.c  audio.h
dummy_input/: Input_1.1.h  Makefile  input.c  input.h  makewin32.bat
dummy_video/: CMakeLists.txt  Graphics_1.3.h  Makefile  Zilmar GFX 1.3.h  video.cpp  video.h
generic/: pre.mk
glN64/: 2xSAI.cpp  3DMath.h  CMakeLists.txt  CRC.cpp  CRC.h  Combiner.cpp  Config_gtk2.cpp  Config_kde4.cpp  Config_linux.cpp  Config_nogui.cpp  Config_qt4.cpp  Config_win32.cpp  Debug.h  DepthBuffer.cpp  DepthBuffer.h  FrameBuffer.cpp  FrameBuffer.h  GBI.cpp  GBI.h  Makefile  N64.cpp  NV_register_combiners.cpp  NV_register_combiners.h  OpenGL.cpp  OpenGL.h  RSP.cpp  RSP.h  Resource.rc  Textures.cpp  Textures.h  VI.cpp  Zilmar GFX 1.3.h  convert.h  gDP.cpp  gDP.h  gSP.cpp  gl.h  glATI.h  glN64.cpp  glN64.h  (+7 more)
glide64/: 3dmath.cpp  3dmath.h  CMakeLists.txt  CRC.cpp  CRC.h  Changes.txt  Combine.cpp  Combine.h  Config.cpp  Debugger.cpp  Debugger.h  DepthBufferRender.cpp  DepthBufferRender.h  Gfx1.3.h  Glide64.ini  Ini.cpp  Ini.h  Main.cpp  Makefile  MiClWr16b.h  MiClWr8b.h  TexBuffer.cpp  TexBuffer.h  TexCache.cpp  TexCache.h  TexConv.h  TexLoad.h  TexLoad16b.h  TexLoad32b.h  TexLoad4b.h  TexLoad8b.h  TexMod.h  TexModCI.h  Tmem.h  Tmem_nasm.asm  ToolTips.cpp  ToolTips.h  Ucode00.h  UcodeFB.h  Util.cpp  (+21 more)
glide64/icons/: messagebox-error.xpm  messagebox-info.xpm  messagebox-quest.xpm  messagebox-warn.xpm
glide64/wrapper/: 2xsai.cpp  2xsai.h  3dfx-mangling.h  3dfx.h  benchmark.cpp  combiner.cpp  config.cpp  filter.cpp  g3ext.h  geometry.cpp  glext.h  glide.h  glidesys.h  hq2x.cpp  hq4x.cpp  main.cpp  main.h  resource.h  textures.cpp  window.cpp
icons/: LICENSES
jttl_audio/: Audio_#1.2.h  Audio_1.1.h  Audio_1.2.h  CMakeLists.txt  Makefile  config_gtk2.c  gui.h  gui_gtk2.c  gui_gtk2.h  gui_none.c  jttl_audio.conf  main.c  main.h  volume.c  volume.h
lang/: catalan.lng  dutch.lng  french.lng  german.lng  italian.lng  pt_BR.lng  spanish.lng  swedish.lng
main/: Controller_#1.1.h  Gfx_#1.3.h  Rsp_#1.1.h  adler32.c  cheat.c  cheat.h  config.c  config.h  gui.h  guifuncs.c  guifuncs.h  ini_reader.c  inputrecording.c  inputrecording.h  ioapi.c  ioapi.h  irix.c  irix.h  lirc.c  lirc.h  main.c  main.h  mupenIniApi.c  mupenIniApi.h  network.c  network.h  osd.cpp  osd.h  plugin.c  plugin.h  rom.c  rom.h  romcache.c  romcache.h  savestates.c  savestates.h  translate.c  translate.h  unzip.c  unzip.h  (+13 more)
memory/: dma.c  flashram.c  flashram.h  memory.c  memory.h  pif.c  pif2.h  tlb.c  tlb.h
mingw/: pre.mk
mupen64_audio/: Audio_1.1.h  CMakeLists.txt  Makefile  main.c
mupen64_input/: CMakeLists.txt  Controller_1.1.h  Makefile  main.c
mupen64_soft_gfx/: Makefile  bl.cpp  rsp.cpp  rsp.h  vi_SDL.cpp
network/: client.c  master.c  master.h  network.c  network.h  server.c
opengl/: OGLFT.cpp  OGLFT.h  osd.cpp  osd.h  screenshot.cpp  screenshot.h
plugins/gfx/glN64/: CMakeLists.txt  CRC.cpp  CRC.h  Combiner.cpp  Config.h  Config_gtk2.cpp  Config_nogui.cpp  FrameBuffer.cpp  N64.cpp  NV_register_combiners.cpp  OpenGL.cpp  OpenGL.h  RSP.cpp  RSP.h  Textures.cpp  glN64.cpp  glN64.h  texture_env.cpp  texture_env_combine.cpp
r4300/: bc.c  compare_core.c  cop0.c  cop1.c  cop1_d.c  cop1_l.c  cop1_s.c  cop1_w.c  empty_dynarec.c  exception.c  exception.h  interupt.c  interupt.h  macros.h  profile.c  pure_interp.c  r4300.c  r4300.h  recomp.c  recomp.h  (+4 more)
rice_video/: CMakeLists.txt  CNvTNTCombiner.cpp  CNvTNTCombiner.h  COLOR.h  CSortedList.h  Combiner.cpp  Combiner.h  CombinerDefs.h  CombinerTable.cpp  Config.cpp  Config.h  ConvertImage.cpp  ConvertImage.h  ConvertImage16.cpp  CritSect.h  Debugger.cpp  Debugger.h  DecodedMux.cpp  DecodedMux.h  DeviceBuilder.cpp  DeviceBuilder.h  DirectXDecodedMux.cpp  DirectXDecodedMux.h  ExtendedRender.h  FrameBuffer.cpp  FrameBuffer.h  GeneralCombiner.cpp  GeneralCombiner.h  GraphicsContext.cpp  GraphicsContext.h  IColor.h  Makefile  OGLCombiner.cpp  OGLCombiner.h  OGLCombinerNV.cpp  OGLCombinerNV.h  OGLCombinerTNT2.cpp  OGLCombinerTNT2.h  OGLError.cpp  OGLError.h  (+69 more)
rice_video/gl/: gl.h
rice_video/gui_gtk2/: icontheme.cpp  icontheme.h  main_gtk2.cpp  main_gtk2.h  messagebox_gtk2.c  messagebox_gtk2.cpp
rice_video/liblinux/: BMGDLL.h  BMGImage.c  BMGImage.h  BMGLibPNG.h  BMGUtils.c  BMGUtils.h  bmp.c  deflate.c  jpegrw.h  pngconf.h  pngmem.c  pngrtran.c  pngrw.c  pngrw.h  pngwutil.c  tiffrw.h  trees.c  zconf.h  zlib.h  zutil.c  zutil.h
rsp_hle/: Audio_#1.1.h  CMakeLists.txt  ConfigDialog.h  Makefile  Rsp_#1.1.h  Rsp_1.1.h  config.c  config.h  config.ui  disasm.c  extension.c  extension.h  gui.h  gui_gtk2.c  gui_none.c  gui_qt4.cpp  hle.h  jpeg.c  main.c  messagebox.qrc  ucode1.cpp  ucode2.cpp  ucode3.cpp  ucode3mp3.cpp  wintypes.h
(+659 files in other folders)
